modifica da exampleproject

--- a/app/design/frontend/Gemma/mytheme/web/css/source/_extends.less
+++ b/app/design/frontend/Gemma/mytheme/web/css/source/_extends.less
@@ -1,34 +1,18 @@
+// /**
+//  * Copyright © Magento, Inc. All rights reserved.
+//  * See COPYING.txt for license details.
+//  */
+
+
 @color: #ff0000;
 h1 {
     color: @color;
 };
 
-@media-common: true; // Sets whether to output common styles (true|false)
-@indent__base: @line-height__computed; // 20px
-@indent__xl: @indent__base * 2; // 40px
-@indent__l: @indent__base * 1.5; // 30px
-@indent__m: @indent__base * 1.25; // 25px
-@indent__s: @indent__base / 2; // 10px
-@indent__xs: @indent__base / 4; // 5px
-@color-gray40: #666;
-@h1__font-size-desktop: ceil((@font-size__base * 2.85)); // 40px
-@h1__margin-bottom__desktop: @indent__xl;
-@addto-color: @color-gray40;
-@header-icons-color: @color-gray56;
-@header-icons-color-hover: @color-gray20;
-@button__shadow: inset 0 2px 1px rgba(0,0,0,.12);
-@button__shadow-active: inset 0 1px 0 0 fade(@border-color__base, 80), inset 0 -1px 0 0 fade(@border-color__base, 30); // Used for secondary button and catalog toolbar controls
-@checkout-sidebar-shipping-information__line-height: @checkout-billing-address-details__line-height;
-@checkout-billing-address-details__line-height: 27px;
-@minicart-icons-color: @header-icons-color;
-@checkout-sidebar-shipping-information-edit-icon__color: @minicart-icons-color;
+ui-menu ui-widget ui-widget-content ui-corner-all{
+    color:aqua;
+}
 
-
-
-// /**
-//  * Copyright © Magento, Inc. All rights reserved.
-//  * See COPYING.txt for license details.
-//  */
 
 //
 //  List default styles reset
